# SAT-solver

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
ci/: Dockerfile
cmake/: comp_flags.cmake  gcc_support.cmake  modules_support.cmake
sat_solver/: CMakeLists.txt  main.cc  sat.cppm  test.cc
src/: CMakeLists.txt
src/sat/: CMakeLists.txt  sat.cppm
test/unit/: CMakeLists.txt
testgen/: testgen.py
tools/: CMakeLists.txt
tools/solver/: CMakeLists.txt  solver.cc
